--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.18",
-    "sass-embedded": "^1.79.5",
+    "@vuepress/plugin-pwa": "2.0.0-rc.56",
+    "@vuepress/plugin-search": "2.0.0-rc.55",
+    "mathjax-full": "^3.2.2",
+    "sass-embedded": "^1.80.6",
     "vue": "^3.5.12",
     "vuepress": "2.0.0-rc.18",
+    "markdown-it-plantuml": "^1.4.1",
     "vuepress-theme-hope": "2.0.0-rc.59"
   }
 }
